--- a/index.html
+++ b/index.html
@@ -4,8 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho de Fundamentos de Desenvolvimento de Software</title>
+    <style>
+        body{
+            background-color: rgb(238, 237, 237);
+        }
+        table{
+            width: 100%;
+            padding: 10px;
+            border-radius: 15px;
+            border:rgb(118, 0, 0) solid 3px;
+        }
+        p {
+            font-size: 18px;
+            text-align: justify
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        td {
+            border:rgb(118, 0, 0) solid 3px;
+            padding: 10px;
+        }
+        th {
+            border:rgb(118, 0, 0) solid 3px;
+            padding: 10px;
+        }
+        a:hover{
+            color:rgb(118, 0, 0);
+        }
+        .flag-size{
+            height: 50px;
+            border-radius: 5px;
+        }
+        .tr-table-1{
+            text-align: center;
+        }
+        .h1-name{
+            text-align: center;
+            color: rgb(118, 0, 0);
+        }
+        .hobbie-img{
+            height: 300px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1 class="h1-name">Lorena de Souza Ferreira</h1>
+    <p>
+        Prazer, me chamo Lorena, natural de Ipatinga-MG, 27 anos, atualmente residente em Belo Horizonte-MG.
+        Divido meu tempo livre entre assistir séries, filmes, ouvir música, jogar e ler. Também, tenho estudado programação e outras vertentes do TI.
+    </p>
+    <button  id="buttonClick">Clique para ver uma mensagem!</button>
+    <p id="newMessage"></p>
+    <p>Alguns dos meus hobbies:</p>
+    <ul>
+        <li>Natação</li>
+        <li>Vôlei</li>
+        <li>Cozinhar</li>
+    </ul>
+    <p>Imagem de um dos meus hobbies:</p>
+    <img
+        class="hobbie-img" 
+        src="https://conteudo.imguol.com.br/c/entretenimento/ca/2019/04/30/cozinhar-saudavel-1556665980743_v2_900x506.jpg"
+    >
+    <table>
+        <caption>Países que gostaria de conhecer</caption>
+        <tr>
+            <th>Países</th>
+            <th>Bandeiras</th>
+        </tr>
+        <tr class="tr-table-1">
+            <td>Itália </td>
+            <td>
+                <img
+                    class="flag-size"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Flag_of_Italy.svg/1280px-Flag_of_Italy.svg.png"
+                >
+            </td>
+        </tr>
+        <tr class="tr-table-1">
+            <td>Japão</td>
+            <td>
+                <img
+                    class="flag-size"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Flag_of_Japan.svg/1280px-Flag_of_Japan.svg.png">
+            </td>
+        </tr>
+        <tr class="tr-table-1">
+            <td>Coreia do Sul</td>
+            <td>
+                <img
+                class="flag-size"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Flag_of_South_Korea.svg/1280px-Flag_of_South_Korea.svg.png">
+            </td>
+        </tr>
+    </table>
+    <p>Site que tenho muito interesse:
+        <a href="https://hypescience.com/">
+            HypeScience
+        </a>
+    </p>
+    <script>
+        document.getElementById("buttonClick").addEventListener("click", clickMessage);
+        function clickMessage(){
+            document.getElementById("newMessage").innerHTML = "Seja bem vindo(a) a minha biografia!"
+        }
+    </script>
+
 </body>
 </html>
