--- a/index.html
+++ b/index.html
@@ -4,49 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho de Fundamentos de Desenvolvimento de Software</title>
-    <style>
-        body{
-            background-color: rgb(238, 237, 237);
-        }
-        table{
-            width: 100%;
-            padding: 10px;
-            border-radius: 15px;
-            border:rgb(118, 0, 0) solid 3px;
-        }
-        p {
-            font-size: 18px;
-            text-align: justify
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        td {
-            border:rgb(118, 0, 0) solid 3px;
-            padding: 10px;
-        }
-        th {
-            border:rgb(118, 0, 0) solid 3px;
-            padding: 10px;
-        }
-        a:hover{
-            color:rgb(118, 0, 0);
-        }
-        .flag-size{
-            height: 50px;
-            border-radius: 5px;
-        }
-        .tr-table-1{
-            text-align: center;
-        }
-        .h1-name{
-            text-align: center;
-            color: rgb(118, 0, 0);
-        }
-        .hobbie-img{
-            height: 300px;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
     <h1 class="h1-name">Lorena de Souza Ferreira</h1>
@@ -104,12 +63,6 @@
             HypeScience
         </a>
     </p>
-    <script>
-        document.getElementById("buttonClick").addEventListener("click", clickMessage);
-        function clickMessage(){
-            document.getElementById("newMessage").innerHTML = "Seja bem vindo(a) a minha biografia!"
-        }
-    </script>
-
+    <script src="index.js"></script>
 </body>
 </html>
